scenarios/capsule/04-hostname_collision/ingress1.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-1
spec:
  rules:
  - host: cncf.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: cncf
            port:
              number: 80
