scenarios/capsule/04-hostname_collision/ingress2.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-2
spec:
  rules:
  - host: cncf.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: clastix
            port:
              number: 80
